--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --exit-child --transpile-only --ignore-watch node_modules --respawn -r tsconfig-paths/register src/server.ts"
+    "dev": "ts-node-dev --inspect --exit-child --transpile-only --ignore-watch node_modules --respawn -r tsconfig-paths/register src/server.ts | pino-pretty"
   },
   "dependencies": {
     "@prisma/client": "^3.4.2",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
+    "pino": "^7.5.1",
     "swagger-ui-express": "^4.2.0",
     "yup": "^0.32.11"
   },
@@ -24,10 +25,12 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
+    "@types/pino": "^7.0.5",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.4.0",
+    "pino-pretty": "^7.2.0",
     "prisma": "^3.4.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
