--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "csv-parse": "^4.16.3",
+    "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
