--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --exit-child --transpile-only --ignore-watch node_modules --respawn -r tsconfig-paths/register src/server.ts | pino-pretty"
+    "dev": "ts-node-dev --inspect --exit-child --transpile-only --ignore-watch node_modules --respawn -r tsconfig-paths/register src/server.ts | pino-pretty",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^3.4.2",
@@ -27,15 +28,20 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
     "@types/pino": "^7.0.5",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.4.0",
+    "jest": "^27.4.5",
     "pino-pretty": "^7.2.0",
     "prisma": "^3.4.2",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
