--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --exit-child --transpile-only --ignore-watch node_modules --respawn -r tsconfig-paths/register src/server.ts | pino-pretty",
-    "test": "jest"
+    "test": "jest",
+    "db:seed": "npx prisma db seed --preview-feature",
+    "db:reset": "npx prisma migrate reset prisma db seed"
   },
   "dependencies": {
     "@prisma/client": "^3.4.2",
@@ -31,6 +33,7 @@
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.1",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
@@ -42,8 +45,9 @@
     "prisma": "^3.4.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   }
 }
